<resources>
    <string name="app_name">38慧眼</string>
    <string name="hometitle">首页</string>
    <string name="sorttilte">分类</string>
    <string name="cartitle">购物车</string>
    <string name="usertitle">我的</string>
    <string-array name="sex">
        <item>女</item>
        <item>男</item>
    </string-array>

    <string name="sort_menu_default">默认</string>
    <string name="sort_menu_new">最新</string>
    <string name="sort_menu_amount">销量</string>
    <string name="sort_menu_price">价格</string>


    <string name="cart_empty_button">随便看看</string>

    <!--商品详情的标题-->
    <string name="goods_details_title">产品详情</string>
    <string name="goods_comment_title">商品评价</string>
    <string name="goods_comment_reply">评价回复</string>
    <string name="goods_comment_reply_none">没有回复</string>
    <string name="goods_comment_none">没有评论</string>
    <string name="goods_comment_id">楼</string>
    <string name="user_register_detail_title">设置登录密码</string>
    <string name="user_register_detail_validatecode">验证短信已发送至</string>
    <string name="user_register_detail_validatecodeagin">获取验证码</string>
    <string name="user_register_detail_validatecodeagin_hint">验证码</string>
    <string name="user_register_detail_inputpassword">请输入密码</string>
    <string name="user_register_detail_confirmpassword">确认密码</string>
    <string name="user_register_detail_plot">所属小区</string>
    <string name="user_register_detail_plot_detail">请输入小区名</string>
    <string name="user_register_detail_consignee">收货人</string>
    <string name="user_register_detail_consignee_hint">收货人的姓名</string>
    <string name="user_register_detail_telnum">手机号码</string>
    <string name="user_register_detail_telnum_hint">11位手机号码</string>
    <string name="user_register_detail_address">详细地址</string>
    <string name="user_register_detail_address_hint">详细地址</string>
    <string name="user_register_detail_register">立即注册</string>
    <string name="loading">正在加载</string>
    <string name="NetWorkChange">亲,网络不太好哦</string>

    <!--人民币字样-->
    <string name="rmb">￥</string>
    <!--库存-->
    <string name="goods_stock">库存:</string>
    <string name="activity_back">返回上一页</string>
    <string name="comment_rating">好评</string>
    <string name="comment_all">全部(</string>

    <string-array name="search_spinner">
        <item>水果</item>
        <item>鲜肉</item>
        <item>水产</item>
        <item>蔬菜</item>
    </string-array>
    <string name="title_activity_goods_comment">GoodsCommentActivity</string>
    <string name="goods_detail_unit">0.01/个</string>
    <string name="goods_detail_rmb">￥</string>
    <string name="goods_detail_pic_description">商品详情图片</string>
    <string name="goods_detail_stocknum">88</string>
    <string name="goods_detail_name">美国猪带骨肉眼大排 500g 盒装</string>
    <string name="goods_detail_comment_left">评论(</string>
    <string name="goods_detail_comment_right">)</string>
    <string name="cart_title">购物车</string>
    <string name="event_title">一周菜谱</string>
    <string name="new_recommend">新品推荐</string>
    <string name="option_address">选择地址</string>
    <string name="bind_phone">绑定手机</string>
    <string name="update_password">修改密码</string>
    <string name="add_address">新建收货地址</string>
    <string name="aftersales_service">售后服务-订单列表</string>
    <string name="user_credits">我的积分</string>
    <string name="find_password">找回密码</string>
    <string name="message_center">消息中心</string>
    <string name="update_address">修改地址</string>
    <string name="my_order">我的订单</string>
    <string name="orders_detail">订单详情</string>
    <string name="user_message">个人信息</string>
    <string name="set">设置</string>
    <string name="register">注册</string>
    <string name="address_manager">收货地址管理</string>
    <string name="pull_up_load">上拉加载数据</string>
    <string name="comment_add_hint">想说些什么？</string>
    <string name="customer_service">客服</string>

</resources>
