<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_detail_background"
    android:orientation="vertical"
    tools:context="com.example.eyes38.activity.UserRegisterDetailActivity">
    <!--顶部标题-->
    <RelativeLayout
        android:id="@+id/sorttitle"
        style="@style/pagetitle">
        <!--sort_sort_title分类中标题-->
        <ImageView
            android:id="@+id/user_register_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/sort_sort_title"
            style="@style/pagetitletext"
            android:text="@string/user_register_detail_title" />
    </RelativeLayout>
    <!-- 内容 -->
    <LinearLayout style="@style/pagecontent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!--提示，验证码已发送*****-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/user_register_detail_validatecode" />

                    <TextView
                        android:textColor="@color/them_color"
                        android:id="@+id/user_register_detail_num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <!--填写验证码-->
                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal"
                    android:padding="10dp"><requestFocus/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:src="@mipmap/input" />

                    <EditText
                        android:id="@+id/user_register_detail_validatecode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/white"
                        android:inputType="number"
                        android:maxLength="6"
                        android:hint="@string/user_register_detail_validatecodeagin_hint"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/user_register_detail_validatecode_adjust"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:src="@mipmap/exclamation" />

                    <Button
                        android:id="@+id/user_register_detail_obtain"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/them_color"
                        android:text="@string/user_register_detail_validatecodeagin"
                        android:textColor="@color/white" />

                </LinearLayout>
                <!--输入密码-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/password" />

                    <EditText
                        android:id="@+id/user_register_detail_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:background="@color/white"
                        android:hint="@string/user_register_detail_inputpassword"
                        android:inputType="textPassword"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/user_register_detail_password_adjust"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/exclamation" />
                </LinearLayout>
                <!--再次输入密码-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/password" />

                    <EditText
                        android:id="@+id/user_register_detail_confirmpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:background="@color/white"
                        android:hint="@string/user_register_detail_confirmpassword"
                        android:inputType="textPassword"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/user_register_detail_confirmpassword_adjust"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/exclamation" />
                </LinearLayout>
                <!--所属小区-->
                <LinearLayout
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/user_register_detail_plot"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/user_register_detail_plot_spinner_pro"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:spinnerMode="dialog"/>

                        <Spinner
                            android:id="@+id/user_register_detail_plot_spinner_city"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog"
                            android:background="@color/white"
                            android:visibility="gone"/>

                        <Spinner
                            android:id="@+id/user_register_detail_plot_spinner_area"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog"
                            android:background="@color/white"
                            android:visibility="gone"/>
                    </LinearLayout>

                </LinearLayout>
                <!--小区名-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/user_register_detail_plotname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="20"
                        android:background="@color/white"
                        android:hint="@string/user_register_detail_plot_detail"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/user_register_detail_communtiy_adjust"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/exclamation" />
                </LinearLayout>
                <!--&lt;!&ndash;收货人&ndash;&gt;
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/user_register_detail_consignee"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_register_detail_consignee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:background="@color/white"
                        android:hint="@string/user_register_detail_consignee_hint"
                        android:inputType="textPersonName"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/exclamation" />
                </LinearLayout>
                &lt;!&ndash;手机号码&ndash;&gt;
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/user_register_detail_telnum"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_register_detail_consignee_telnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:background="@color/white"
                        android:hint="@string/user_register_detail_telnum_hint"
                        android:inputType="phone"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/exclamation" />
                </LinearLayout>
                &lt;!&ndash;详细地址&ndash;&gt;
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/user_register_detail_address"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/user_register_detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:background="@color/white"
                        android:hint="@string/user_register_detail_address_hint"
                        android:inputType="textPostalAddress"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/exclamation" />
                </LinearLayout>-->

                <Button
                    android:id="@+id/user_register_detail_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/bottom_line"
                    android:clickable="false"
                    android:text="@string/user_register_detail_register" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
